<resources>
    <string name="app_name">MyRuns</string>
    <string name="activity_type">Activity Type</string>
    <string name="app_sign_in">Sign In</string>
    <string name="app_register">Register</string>
    <string name="major_string">Major</string>
    <string name="input_type">Input Type</string>
    <string name="dartmouth_class_string">Dartmouth Class</string>
    <string name="phone_string">Phone</string>
    <string name="password_string">Password</string>
    <string name="email_string">Email</string>
    <string name="name_string">Name</string>
    <string name="button_string">Change</string>
    <string name="profile_image_string">Profile Image</string>
    <string name="male_string">Male</string>
    <string name="female_string">Female</string>
    <string name="sign_in_string">Sign In</string>
    <string name="register_string">Register</string>
    <string name="incorrect_text">Incorrect</string>
    <string name="nospace_text">No space</string>
    <string name="myruns_string">MyRuns</string>
    <string name="action_settings">Settings</string>
    <string name="edit_profile">edit</string>
    <string name="no_permisssions">Permissions not granted</string>
    <string name="need_camera">Need Camera Permission for Profile Photo</string>
    <string name="no_permisssion_read">Need to Save Profile Picture</string>
    <string name="no_permisssion_write">Need to save image to storage</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_wrong_email">This email address is invalid</string>
    <string name="error_wrong_password">This password is invalid</string>
    <string name="error_password_length">Password must be 6 characters</string>
    <string name="start_button">Start</string>
    <string name="history_button">History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="application_settings">Application Settings</string>
    <string name="activity_text">Activity</string>
    <string name="date_string">Date</string>
    <string name="time_string">Time</string>
    <string name="duration_string">Duration</string>
    <string name="distance_string">Distance</string>
    <string name="calorie_string">Calorie</string>
    <string name="heartbeat_string">Heartbeat</string>
    <string name="comment_sting">Comment</string>
    <string name="default_duration">0 mins</string>
    <string name="default_distance">0 kms</string>
    <string name="default_calorie">0 cals</string>
    <string name="default_bpm">0 bpm</string>
    <string name="enter_string">enter</string>
    <string name="save">save</string>
    <string name="text_miles">0 Miles</string>
    <string name="title_activity_maps">Map</string>
    <string name="activity_still">Activity Still</string>
    <string name="speed_0_00m_s">Speed 0.00m/s</string>
    <string name="avg_speed_0_00m_s">Avg Speed 0.00m/s</string>
    <string name="_0_00m_s">0.00m/s</string>
    <string name="_0_45_cal">0.00 cal</string>
    <string name="board">Board</string>
    <string name="sync">Sync</string>
</resources>
