<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManuelInputActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/layout_activity"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/activity_text" />

                <TextView
                    android:id="@+id/text_activity_input"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_date"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/date_string" />

                <TextView
                    android:id="@+id/text_date_input"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_time"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/time_string" />
                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:id="@+id/text_time_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_duration"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/duration_string" />
                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:id="@+id/text_duration_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_duration" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_distance"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/distance_string" />
                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:id="@+id/text_distance_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_distance" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_calorie"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_calorie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/calorie_string" />
                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:id="@+id/text_Calorie_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_calorie" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_heartbeat"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_heartbeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/heartbeat_string" />
                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:id="@+id/text_heartbeat_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_bpm" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_comment"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/comment_sting" />
                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:id="@+id/text_comment_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>