<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:label="@string/app_sign_in"
    tools:context=".SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_below="@id/toolbar2"
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_sign_in_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/email_string"
                android:inputType="textEmailAddress" />


        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_below="@id/text_input2"
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sign_in_string" />

        <Button
            android:layout_below="@id/sign_in_button"
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/register_string" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input2"
            android:layout_below="@id/text_input"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_sign_in_password"
                android:ems="10"
                android:hint="@string/password_string"
                android:inputType="textPassword"
                android:visibility="visible" />


        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>