<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/RelatLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp" />

            <LinearLayout
                android:id="@+id/image_layout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/toolbar"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:elevation="12dp"
                    android:id="@+id/card_view_image"
                    app:cardCornerRadius="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9">
                    <ImageView
                        android:id="@+id/image_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/profile_image_string"
                        app:srcCompat="@mipmap/ic_launcher_round" />
                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/button_picture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:layout_weight="1"
                    android:text="@string/button_string" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/info_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/image_layout"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="54dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/name_string"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:id="@+id/button_gender"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:checkedButton="2"
                    android:orientation='horizontal'>

                    <RadioButton
                        android:id="@+id/male_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male_string" />

                    <RadioButton
                        android:id="@+id/female_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female_string" />

                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/email_string"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/password_string"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <EditText
                    android:id="@+id/text_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone_string"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/text_major"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/major_string"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/text_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/dartmouth_class_string"
                    android:inputType="number"
                    tools:text=" " />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>